implement token request